<?xml version="1.0" encoding="utf-8"?><!--
Allow content to scroll past boundaries of screen
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ui.main.fragment.PaletteFragment">
    <!--
    Line up content with constraints toward parent and each other
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup android:id="@+id/rg_component"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_suit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_suit" />

            <RadioButton
                android:id="@+id/rb_matrix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_matrix" />

            <RadioButton
                android:id="@+id/rb_cape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cape" />
        </RadioGroup>

        <!--
        FIRST PALETTE
        -->
        <TextView
            android:id="@+id/tv_pal_first_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            style="@style/ControlHead"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_pal_first"
            app:layout_constraintTop_toBottomOf="@+id/rg_component"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_pal_first_view"
            style="@style/CardView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_pal_first_title"
            app:cardCornerRadius="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_pal_first_xtra_head"
                    style="@style/ControlDetailHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pal_first_xtra"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <ListView
                    android:id="@+id/lv_list_pal_first"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:divider="#D1D1D1"
                    android:dividerHeight="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pal_first_xtra_head"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!--
        SECOND PALETTE
        -->
        <TextView
            android:id="@+id/tv_pal_second_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            style="@style/ControlHead"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_pal_second"
            app:layout_constraintTop_toBottomOf="@+id/card_pal_first_view"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_pal_second_view"
            style="@style/CardView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_pal_second_title"
            app:cardCornerRadius="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_pal_second_xtra_head"
                    style="@style/ControlDetailHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pal_first_xtra"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <ListView
                    android:id="@+id/lv_list_pal_second"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:divider="#D1D1D1"
                    android:dividerHeight="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pal_second_xtra_head"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!--
        FIRST COLOR
        -->
        <TextView
            android:id="@+id/tv_pal_col_first_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            style="@style/ControlHead"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_pal_col_first"
            app:layout_constraintTop_toBottomOf="@+id/card_pal_second_view"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_pal_col_first_view"
            style="@style/CardView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_pal_col_first_title"
            app:cardCornerRadius="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_pal_col_first_xtra_head"
                    style="@style/ControlDetailHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pal_col_first_xtra"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <ListView
                    android:id="@+id/lv_list_pal_col_first"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:divider="#D1D1D1"
                    android:dividerHeight="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pal_col_first_xtra_head"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!--
        SECOND COLOR
        -->
        <TextView
            android:id="@+id/tv_pal_col_second_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            style="@style/ControlHead"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_pal_col_second"
            app:layout_constraintTop_toBottomOf="@+id/card_pal_col_first_view"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_pal_col_second_view"
            style="@style/CardView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_pal_col_second_title"
            app:cardCornerRadius="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_pal_col_second_xtra_head"
                    style="@style/ControlDetailHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pal_col_second_xtra"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <ListView
                    android:id="@+id/lv_list_pal_col_second"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:divider="#D1D1D1"
                    android:dividerHeight="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pal_col_second_xtra_head"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>